# shelve

./: Cargo.toml  README.md  rustfmt.toml
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: ci.yaml
sample-files/: more-tasks.csv  tasks.csv
src/: cli.rs  groups.rs  main.rs
tests/: cli.rs
tests/expected/: column-1.txt  column-2.txt  column-3.txt  column-4.txt  column-5.txt  default-column.txt  help.txt  two-files.txt  unexpected-argument.txt  version.txt
tests/inputs/: tasks.csv
