[package]
name = "shelve"
version = "0.1.0"
edition = "2021"
description = "A simple command-line tool to pretty print CSV files grouped by a column"
license = "MIT"
repository = "https://github.com/matagus/shelve"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
csv = "1.3.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "2"
